--- a/lazyscroll/css/lazyscroll.css
+++ b/lazyscroll/css/lazyscroll.css
@@ -9,7 +9,7 @@
     color : #888;
 }
 
- #ls_sts_bar.nomore .spinner {
+ #ls_sts_bar.nomore .ls-loading {
     display : none;
 }
 
@@ -22,7 +22,7 @@
     }
 }
 
-.spinner {
+.ls-loading {
     display : inline-block;
     margin : 0px auto;
     width : 20px;
@@ -35,7 +35,7 @@
 .container1>div, .container2>div, .container3>div {
     width : 6px;
     height : 6px;
-    background-color :  #333;
+    background-color :  #888;
     border-radius : 100%;
     position : absolute;
     -webkit-animation : bouncedelay 1.2s infinite ease-in-out;
@@ -44,7 +44,7 @@
     animation-fill-mode : both;
 }
 
-.spinner .spinner-container {
+.ls-loading .ls-loading-container {
     position : absolute;
     width : 100%;
     height : 100%;
